mobile menu background and footer gradient

--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
 
 
 
-<footer class="site-footer" style="background: #00572e;">
+<footer class="site-footer" style="background: linear-gradient(90deg, rgba(0,80,42,1) 0%, rgba(0,153,81,1) 100%);">
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-sm-12 col-lg-4 p-4 " >
