--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ html * {
       </h2>
   </div>
 
-    <footer class="site-footer" style="background: #00572e;">
+    <footer class="site-footer" style="background: linear-gradient(90deg, rgba(0,80,42,1) 0%, rgba(0,153,81,1) 100%);">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-12 col-lg-4 p-4 " >
@@ -421,7 +421,7 @@ html * {
           </div>
 
           <div class="col-md-4 col-sm-12 col-lg-4 p-4 text-white text-left" >
-            <h1 style="color: rgb(41, 142, 5); text-transform: none; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);"><strong>Be in Touch</strong></h1><br>
+            <h1 style="color: rgb(47, 170, 2); text-transform: none; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);"><strong>Be in Touch</strong></h1><br>
             <p>Ph: +91 85477 53288</p>
             <p>CEO: Lt. Jojoe Karippapparambil Jacob <br> Ph: +91 97450 54066</p>
             <p> </p>
@@ -445,7 +445,7 @@ html * {
           </div>
         </div>
       </div>
-      <div class="text-center p-4 " style="background-color: rgba(0, 0, 0, 0.05); color: rgb(155, 155, 155);">
+      <div class="text-center p-4 " style="background-color: rgba(0, 0, 0, 0.05); color: rgb(170, 170, 170);">
        Copyright © 2023 Central Travancore Chamber of Commerce and Industry. All Rights Reserved
         <!-- <a class="text-reset fw-bold" href=""></a> -->
       </div>
