--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <style>
+      body {
+        overflow-x: hidden;
+      }
       .container {
         color: #333;
         margin: 0 auto;
@@ -414,11 +417,12 @@ html * {
     <footer class="site-footer" style="background: linear-gradient(90deg, rgba(0,80,42,1) 0%, rgba(0,153,81,1) 100%);">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-sm-12 col-lg-4 p-4 " >
-            <div style="display: inline-block; background: linear-gradient(to right, #058543, #ac9108);  border-radius: 50%;">
-                <img src="images/footer.jpg" alt="" style="border: 10px solid transparent; border-radius: 50%;">
+          <div class="col-md-4 col-sm-12 col-lg-4 p-4" style="text-align: center;">
+            <div style="display: inline-block; background: linear-gradient(to right, #058543, #ac9108); border-radius: 50%; padding: 10px;">
+                <img src="images/footer.jpg" alt="" style="max-width: 100%; height: auto; border-radius: 50%;">
             </div>
-          </div>
+        </div>
+        
 
           <div class="col-md-4 col-sm-12 col-lg-4 p-4 text-white text-left" >
             <h1 style="color: rgb(47, 170, 2); text-transform: none; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);"><strong>Be in Touch</strong></h1><br>
