--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ html * {
 
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">About us</a></li>
+                            <li><a href="#about">About us</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                         
@@ -350,7 +350,7 @@ html * {
       }
   </style>
 
-    <div class="homepage-info-section">
+    <div class="homepage-info-section" id="about">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-4 col-lg-5">
