--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="#">About us</a></li>
+                            <li><a href="index.html#about">About us</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav><!-- .site-navigation -->
