mobile banner changed

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ html * {
   /* Mobile Styles */
   @media (max-width: 767px) {
   .swiper-slide {
-    background: url('images/mobile.jpg') no-repeat;
+    background: url('images/mobile-banner.jpg') no-repeat;
     background-size: cover;
     height: 100%; /* Set the height to 100% to maintain aspect ratio */
   }
