new menu links added

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ html * {
                     </div><!-- .site-branding -->
                 </div><!-- .col -->
 
-                <div class="col-2 col-lg-7 order-3 order-lg-3 ">
+                <div class="col-2 col-lg-7 order-3 order-lg-3">
                     <nav class="site-navigation">
                         <div class="hamburger-menu d-lg-none">
                             <span></span>
@@ -142,11 +142,14 @@ html * {
                             <span></span>
                         </div><!-- .hamburger-menu -->
 
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#about">About us</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
+                           <ul>
+                              <li><a href="#">Home</a></li>
+                              <li><a href="#about">About us</a></li>
+                              <li><a href="#">Agenda</a></li>
+                              <li><a href="#">Partners</a></li>
+                              <li><a href="contact.html">Contact</a></li>
+                            </ul>
+              
                         
                     </nav><!-- .site-navigation -->
                 </div><!-- .col -->
