--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,10 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="index.html#about">About us</a></li>
+                            <li><a href="agenda.html">Agenda</a></li>
+                            <li><a href="partners.html">Partners</a></li>
                             <li><a href="contact.html">Contact</a></li>
+
                         </ul>
                     </nav><!-- .site-navigation -->
                 </div><!-- .col -->
